--- a/team_stage/storyCard3.html
+++ b/team_stage/storyCard3.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -14,33 +15,6 @@
 
   <link rel="stylesheet" href="sub.css" />
   <!-- //css -->
-
-
-  <script>
-    function makeCard() {
-      alert('연결확인');
-    };
-
-
-
-
-    let title = $('#title').val();
-    let Password = $('#Password').val();
-    let comment = $('#comment').val();
-
-    let temp_html = `            
-        <div class="col">
-          <div class="card border-info mb-3" style="max-width: 18rem;">
-            <div class="card-body">
-              <h5 class="card-title">${title}</h5>
-              <p class="card-text">${comment}</p>
-              <button type="button" class="btn btn-outline-warning">수정</button>
-              <button type="button" class="btn btn-outline-danger">삭제</button>
-            </div>
-          </div>
-        </div>`;
-    $('#cards').append(temp_html);
-  </script>
 
   <script type="module">
     // Firebase SDK 라이브러리 가져오기
@@ -65,7 +39,6 @@
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
   </script>
- 
 </head>
 
 <body>
@@ -85,7 +58,7 @@
   <form class="comment">
     <div class="row">
       <div class="col">
-        <input id="title" type="text" class="form-control" placeholder="닉네임" aria-label="First name" />
+        <input  type="text" class="form-control" placeholder="닉네임" aria-label="First name" />
       </div>
       <div class="col-auto">
         <label for="inputPassword2" class="visually-hidden">Password</label>
@@ -95,7 +68,7 @@
         <input id="comment" type="text" class="form-control" placeholder="comment" aria-label="Last name" />
       </div>
       <div class="col-auto">
-        <button onclick="makeCard" type="submit" class="btn btn-primary mb-3">저장</button>
+        <button type="submit" class="btn btn-primary mb-3">저장</button>
         <button type="submit" class="btn btn-primary mb-3">취소</button>
       </div>
     </div>
@@ -119,4 +92,3 @@
 </body>
 
 </html>
-
