--- a/team_stage/index.html
+++ b/team_stage/index.html
@@ -84,7 +84,7 @@
             <br>
             <details>
               <summary>우리팀 약속!</summary>
-              <p>캠키기, 마이크를 이용 할 떈 부담없이 사용하기</p>
+              <p>캠켜기, 마이크를 이용 할 떈 부담없이 사용하기</p>
             </details>
           </span>
       </div>
