--- a/team_stage/index.html
+++ b/team_stage/index.html
@@ -57,37 +57,35 @@
 
 <body>
   <div class="container">
-    <div class="wrap-top">
-      <h1 id="team-title">stage 팀 소개</h1>
+    <h1 id="team-title">stage 팀 소개</h1>
 
-      <div class="main1">
-        <div class="main1-left">
-          <img src="2조.png" alt="사진첨부">
-        </div>
-          <span class="main1-right">
-            <h2 style="color:rgb(194, 186, 227)">Our_stage 2조</h2>
-            <br>
-            <details>
-              <summary>조원 이름</summary>
-              <p>박강토, 김연재, 정해준, 정보연, 김형민</p>
-            </details>
-            <br>
-            <details>
-              <summary>우리 팀만의 목표</summary>
-              <p>힘을 합쳐 완성하기!</p>
-            </details>
-            <br>
-            <details>
-              <summary>이미지 링크</summary>
-              <p>링크</p>
-            </details>
-            <br>
-            <details>
-              <summary>우리팀 약속!</summary>
-              <p>캠키기, 마이크를 이용 할 떈 부담없이 사용하기</p>
-            </details>
-          </span>
+    <div class="main1">
+      <div class="main1-left">
+        <img src="2조.png" alt="사진첨부">
       </div>
+        <span class="main1-right">
+          <h2 style="color:slateblue">Our_stage 2조</h2>
+          <br>
+          <details>
+            <summary>조원 이름</summary>
+            <p>박강토, 김연재, 정해준, 정보연, 김형민</p>
+          </details>
+          <br>
+          <details>
+            <summary>우리 팀만의 목표</summary>
+            <p>힘을 합쳐 완성하기!</p>
+          </details>
+          <br>
+          <details>
+            <summary>이미지 링크</summary>
+            <p>링크</p>
+          </details>
+          <br>
+          <details>
+            <summary id="summary-color">우리팀 약속!</summary>
+            <p class="cam">캠키기, 마이크를 이용 할 떈 부담없이 사용하기</p>
+          </details>
+        </span>
     </div>
 
     <div id="story" class="images">
@@ -152,6 +150,7 @@
   </div>
 
   <div>
+
   </div>
   </div>
 
