--- a/team_stage/storyCard1.html
+++ b/team_stage/storyCard1.html
@@ -4,15 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>소개하기</title>
-
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-		<!-- //jQuery -->
-
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-		<!-- //bootstrap -->
-
 		<link rel="stylesheet" href="sub.css" />
-		<!-- //css -->
 
 		<script type="module">
 			// Firebase SDK 라이브러리 가져오기
@@ -38,53 +30,17 @@
 			const db = getFirestore(app);
 		</script>
 	</head>
-
 	<body>
-		<a href="index.html">❌</a>
-		<div class="cardMain">
-			<div>
-				<img id="photo" class="cardImages" src="박강토사진.png" alt="이미지를 누르면 연결됩니다." />
-			</div>
-			<div class="cardStory">
-				<h1>박강토</h1>
-				<p>정리와 브리핑을 잘 하는 편입니다.</p>
-				<a href="https://gidalim4u.tistory.com/">블로그</a>
-				<a href="https://github.com/gidalim/">GitHub</a>
-			</div>
+		<div class="image">
+			<a href="index.html">
+				<img class="images" src="박강토사진.PNG" alt="이미지를 누르면 연결됩니다." />
+			</a>
 		</div>
-
-		<form class="comment">
-			<div class="row">
-				<div class="col">
-					<input type="text" class="form-control" placeholder="닉네임" aria-label="First name" />
-				</div>
-				<div class="col-auto">
-					<label for="inputPassword2" class="visually-hidden">Password</label>
-					<input type="password" class="form-control" id="Password" placeholder="Password" />
-				</div>
-				<div class="col">
-					<input id="comment" type="text" class="form-control" placeholder="comment" aria-label="Last name" />
-				</div>
-				<div class="col-auto">
-					<button type="submit" class="btn btn-primary mb-3">저장</button>
-					<button type="submit" class="btn btn-primary mb-3">취소</button>
-				</div>
-			</div>
-		</form>
-
-		<div class="commentBox">
-			<div id="cards" class="row row-cols-1 row-cols-md-4 g-4">
-				<div class="col">
-					<div class="card border-info mb-3" style="max-width: 18rem">
-						<div class="card-body">
-							<h5 class="card-title">닉네임</h5>
-							<p class="card-text">comment</p>
-							<button type="button" class="btn btn-outline-warning">수정</button>
-							<button type="button" class="btn btn-outline-danger">삭제</button>
-						</div>
-					</div>
-				</div>
-			</div>
+		<div class="story">
+			<h1>이름</h1>
+			<p>자신의 소개문</p>
+			<p>블로그</p>
+			<p>Github</p>
 		</div>
 	</body>
 </html>
