--- a/team_stage/storyCard3.html
+++ b/team_stage/storyCard3.html
@@ -14,28 +14,28 @@
 		<link rel="stylesheet" href="sub.css" />
 		<!-- //css -->
 
-		<script type="module">
-			// Firebase SDK 라이브러리 가져오기
-			import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js';
-			import { getFirestore } from 'https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js';
-			import { collection, addDoc } from 'https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js';
-			import { getDocs } from 'https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js';
+		<script>
+			// // Firebase SDK 라이브러리 가져오기
+			// import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js';
+			// import { getFirestore } from 'https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js';
+			// import { collection, addDoc } from 'https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js';
+			// import { getDocs } from 'https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js';
 
-			// Firebase 구성 정보 설정
-			const firebaseConfig = {
-				// For Firebase JS SDK v7.20.0 and later, measurementId is optional
-				apiKey: 'AIzaSyDcQ6Q78akg6Oo9Z2VO5APf-QQ7S7kn9DQ',
-				authDomain: 'our-stage.firebaseapp.com',
-				projectId: 'our-stage',
-				storageBucket: 'our-stage.appspot.com',
-				messagingSenderId: '999213003989',
-				appId: '1:999213003989:web:774432a35de3c233c69e5c',
-				measurementId: 'G-G2QMB19RVB',
-			};
+			// // Firebase 구성 정보 설정
+			// const firebaseConfig = {
+			// 	// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+			// 	apiKey: 'AIzaSyDcQ6Q78akg6Oo9Z2VO5APf-QQ7S7kn9DQ',
+			// 	authDomain: 'our-stage.firebaseapp.com',
+			// 	projectId: 'our-stage',
+			// 	storageBucket: 'our-stage.appspot.com',
+			// 	messagingSenderId: '999213003989',
+			// 	appId: '1:999213003989:web:774432a35de3c233c69e5c',
+			// 	measurementId: 'G-G2QMB19RVB',
+			// };
 
-			// Firebase 인스턴스 초기화
-			const app = initializeApp(firebaseConfig);
-			const db = getFirestore(app);
+			// // Firebase 인스턴스 초기화
+			// const app = initializeApp(firebaseConfig);
+			// const db = getFirestore(app);
 		</script>
 	</head>
 
