--- a/team_stage/storyCard3.html
+++ b/team_stage/storyCard3.html
@@ -14,28 +14,46 @@
 		<link rel="stylesheet" href="sub.css" />
 		<!-- //css -->
 
-		<script>
-			// // Firebase SDK 라이브러리 가져오기
-			// import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js';
-			// import { getFirestore } from 'https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js';
-			// import { collection, addDoc } from 'https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js';
-			// import { getDocs } from 'https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js';
+		<script type="module">
+			// Firebase SDK 라이브러리 가져오기
+			import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js';
+			import { getFirestore } from 'https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js';
+			import { collection, addDoc } from 'https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js';
+			import { getDocs } from 'https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js';
 
-			// // Firebase 구성 정보 설정
-			// const firebaseConfig = {
-			// 	// For Firebase JS SDK v7.20.0 and later, measurementId is optional
-			// 	apiKey: 'AIzaSyDcQ6Q78akg6Oo9Z2VO5APf-QQ7S7kn9DQ',
-			// 	authDomain: 'our-stage.firebaseapp.com',
-			// 	projectId: 'our-stage',
-			// 	storageBucket: 'our-stage.appspot.com',
-			// 	messagingSenderId: '999213003989',
-			// 	appId: '1:999213003989:web:774432a35de3c233c69e5c',
-			// 	measurementId: 'G-G2QMB19RVB',
-			// };
+			// Firebase 구성 정보 설정
+			const firebaseConfig = {
+				// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+				apiKey: 'AIzaSyDcQ6Q78akg6Oo9Z2VO5APf-QQ7S7kn9DQ',
+				authDomain: 'our-stage.firebaseapp.com',
+				projectId: 'our-stage',
+				storageBucket: 'our-stage.appspot.com',
+				messagingSenderId: '999213003989',
+				appId: '1:999213003989:web:774432a35de3c233c69e5c',
+				measurementId: 'G-G2QMB19RVB',
+			};
 
-			// // Firebase 인스턴스 초기화
-			// const app = initializeApp(firebaseConfig);
-			// const db = getFirestore(app);
+			// Firebase 인스턴스 초기화
+			const app = initializeApp(firebaseConfig);
+			const db = getFirestore(app);
+
+			$("#makeComment").click(async function () {
+				let title = $('#title').val();
+        let Password = $('#Password').val();
+        let comment = $('#comment').val();
+						let temp_html = `            
+            <div class="col">
+					<div class="card border-info mb-3" style="max-width: 18rem">
+						<div class="card-body">
+							<h5 class="card-title">${title}</h5>
+							<p class="card-text">${comment}</p>
+							<button type="button" class="btn btn-outline-warning">수정</button>
+							<button type="button" class="btn btn-outline-danger">삭제</button>
+						</div>
+					</div>
+				</div>`;
+            $('#card').append(temp_html);
+            });
 		</script>
 	</head>
 
@@ -66,14 +84,14 @@
 					<input id="comment" type="text" class="form-control" placeholder="comment" aria-label="Last name" />
 				</div>
 				<div class="col-auto">
-					<button onclick="makeCard" type="submit" class="btn btn-primary mb-3">저장</button>
-					<button type="submit" class="btn btn-primary mb-3">취소</button>
+					<button id="makeComment" type="button" class="btn btn-primary mb-3">저장</button>
+					<button type="button" class="btn btn-primary mb-3">취소</button>
 				</div>
 			</div>
 		</form>
 
 		<div class="commentBox">
-			<div id="cards" class="row row-cols-1 row-cols-md-4 g-4">
+			<div id="card" class="row row-cols-1 row-cols-md-4 g-4">
 				<div class="col">
 					<div class="card border-info mb-3" style="max-width: 18rem">
 						<div class="card-body">
