--- a/team_stage/storyCard3.html
+++ b/team_stage/storyCard3.html
@@ -37,25 +37,37 @@
 			const app = initializeApp(firebaseConfig);
 			const db = getFirestore(app);
 
-			$("#makeComment").click(async function () {
-				let title = $('#title').val();
+		
+    $(document).on('click', '#card .delete-btn', function () {
+        const enteredPassword = prompt("Enter the password to delete the comment:");
+        const storedPassword = 'your_actual_stored_password';
+        if (enteredPassword === storedPassword || enteredPassword === null) {
+            
+            $(this).closest('.col').remove();
+        } else {    
+            alert("Incorrect password. Deletion failed.");
+        }
+    });
+
+    $("#makeComment").click(async function () {
+        let title = $('#title').val();
         let Password = $('#Password').val();
         let comment = $('#comment').val();
-						let temp_html = `            
+        let temp_html = `
             <div class="col">
-					<div class="card border-info mb-3" style="max-width: 18rem">
-						<div class="card-body">
-							<h5 class="card-title">${title}</h5>
-							<p class="card-text">${comment}</p>
-							<button type="button" class="btn btn-outline-warning">수정</button>
-							<button type="button" class="btn btn-outline-danger">삭제</button>
-						</div>
-					</div>
-				</div>`;
-            $('#card').append(temp_html);
-            });
-		</script>
-	</head>
+                <div class="card border-info mb-3" style="max-width: 18rem">
+                    <div class="card-body">
+                        <h5 class="card-title">${title}</h5>
+                        <p class="card-text">${comment}</p>
+                        <button type="button" class="btn btn-outline-warning">수정</button>
+                        <button type="button" class="btn btn-outline-danger delete-btn">삭제</button>
+                    </div>
+                </div>
+            </div>`;
+        $('#card').append(temp_html);
+    });
+</script>
+</head>
 
 	<body>
 		<a href="index.html">❌</a>
