--- a/team_stage/storyCard5.html
+++ b/team_stage/storyCard5.html
@@ -74,9 +74,10 @@
 		</form>
 
 		<div class="commentBox">
-			<div id="cards" class="row row-cols-1 row-cols-md-4 g-4">
+			<div id="card" class="row row-cols-1 row-cols-md-4 g-4">
 				<div class="col">
-					<div class="card border-info mb-3" style="max-width: 18rem">
+					<div class="card border-info mb-3">
+						<!-- 스타일 맥스 넓이값 지움 style="max-width: 18rem"-->
 						<div class="card-body">
 							<h5 class="card-title">닉네임</h5>
 							<p class="card-text">comment</p>
