--- a/team_stage/storyCard3.html
+++ b/team_stage/storyCard3.html
@@ -39,13 +39,13 @@
 
 		
     $(document).on('click', '#card .delete-btn', function () {
-        const enteredPassword = prompt("Enter the password to delete the comment:");
+        const enteredPassword = prompt("삭제하시려면 비밀번호를 입력해주세요:");
         const storedPassword = 'your_actual_stored_password';
         if (enteredPassword === storedPassword || enteredPassword === null) {
             
             $(this).closest('.col').remove();
         } else {    
-            alert("Incorrect password. Deletion failed.");
+            alert("비밀번호가 틀립니다.");
         }
     });
 
