--- a/team_stage/storyCard3.html
+++ b/team_stage/storyCard3.html
@@ -37,23 +37,21 @@
 			const app = initializeApp(firebaseConfig);
 			const db = getFirestore(app);
 
-		
-    $(document).on('click', '#card .delete-btn', function () {
-        const enteredPassword = prompt("Enter the password to delete the comment:");
-        const storedPassword = 'your_actual_stored_password';
-        if (enteredPassword === storedPassword || enteredPassword === null) {
-            
-            $(this).closest('.col').remove();
-        } else {    
-            alert("Incorrect password. Deletion failed.");
-        }
-    });
+			$(document).on('click', '#card .delete-btn', function () {
+				const enteredPassword = prompt('Enter the password to delete the comment:');
+				const storedPassword = 'your_actual_stored_password';
+				if (enteredPassword === storedPassword || enteredPassword === null) {
+					$(this).closest('.col').remove();
+				} else {
+					alert('Incorrect password. Deletion failed.');
+				}
+			});
 
-    $("#makeComment").click(async function () {
-        let title = $('#title').val();
-        let Password = $('#Password').val();
-        let comment = $('#comment').val();
-        let temp_html = `
+			$('#makeComment').click(async function () {
+				let title = $('#title').val();
+				let Password = $('#Password').val();
+				let comment = $('#comment').val();
+				let temp_html = `
             <div class="col">
                 <div class="card border-info mb-3" style="max-width: 18rem">
                     <div class="card-body">
@@ -64,10 +62,10 @@
                     </div>
                 </div>
             </div>`;
-        $('#card').append(temp_html);
-    });
-</script>
-</head>
+				$('#card').append(temp_html);
+			});
+		</script>
+	</head>
 
 	<body>
 		<a href="index.html">❌</a>
@@ -105,7 +103,7 @@
 		<div class="commentBox">
 			<div id="card" class="row row-cols-1 row-cols-md-4 g-4">
 				<div class="col">
-					<div class="card border-info mb-3" style="max-width: 18rem">
+					<div class="card border-info mb-3">
 						<div class="card-body">
 							<h5 class="card-title">닉네임</h5>
 							<p class="card-text">comment</p>
