--- a/team_stage/storyCard3.html
+++ b/team_stage/storyCard3.html
@@ -37,45 +37,45 @@
 			const app = initializeApp(firebaseConfig);
 			const db = getFirestore(app);
 
-			// 삭제기능 비밀번호가 계속 틀리다는 오류 //
-			$(document).on('click', '#card .delete-btn', function () {
-				if ($(this).closest('.card-body').find('.password-input').length === 0) {
-					const passwordInput = $('<input>', {
-						type: 'password',
-						class: 'form-control password-input',
-						placeholder: 'Password',
-						style: 'margin-top: 10px; width: 200px; height: 30px;',
-					});
+		// 삭제기능 비밀번호가 계속 틀리다는 오류 //
+		$(document).on('click', '#card .delete-btn', function () {
+        if ($(this).closest('.card-body').find('.password-input').length === 0) {
+            const passwordInput = $('<input>', {
+                type: 'password',
+                class: 'form-control password-input',
+                placeholder: 'Password',
+				style: 'margin-top: 10px; width: 200px; height: 30px;' 
+            });
 
-					const deleteBtn = $(this);
-					const cardBody = deleteBtn.closest('.card-body');
+            const deleteBtn = $(this);
+            const cardBody = deleteBtn.closest('.card-body');
 
-					cardBody.append(passwordInput);
+            cardBody.append(passwordInput);
 
-					passwordInput.on('blur', function () {});
+            passwordInput.on('blur', function () {
+             });
 
-					passwordInput.on('keydown', function (e) {
-						if (e.key === 'Enter') {
-							const enteredPassword = $(this).val();
-							const storedPassword = 'your_actual_stored_password';
+            passwordInput.on('keydown', function (e) {
+    	     if (e.key === 'Enter') {
+                    const enteredPassword = $(this).val();
+                    const storedPassword = 'your_actual_stored_password';
 
-							if (enteredPassword === storedPassword) {
-								n;
-								deleteBtn.closest('.col').remove();
-							} else {
-								alert('비밀번호가 틀립니다.');
-							}
-						}
-					});
-					passwordInput.focus();
-				} else {
-				}
-			});
-			$('#makeComment').click(async function () {
-				let title = $('#title').val();
-				let Password = $('#Password').val();
-				let comment = $('#comment').val();
-				let temp_html = `
+                    if (enteredPassword === storedPassword) {
+                        deleteBtn.closest('.col').remove();
+                    } else {
+                        alert("비밀번호가 틀립니다.");
+                    }
+                }
+            });
+	       passwordInput.focus();
+        } else {
+        }
+    });
+    $("#makeComment").click(async function () {
+        let title = $('#title').val();
+        let Password = $('#Password').val();
+        let comment = $('#comment').val();
+        let temp_html = `
             <div class="col">
                 <div class="card border-info mb-3" style="max-width: 18rem">
                     <div class="card-body">
@@ -86,10 +86,10 @@
                     </div>
                 </div>
             </div>`;
-				$('#card').append(temp_html);
-			});
-		</script>
-	</head>
+        $('#card').append(temp_html);
+    });
+</script>
+</head>
 
 	<body>
 		<a href="index.html">❌</a>
@@ -127,7 +127,7 @@
 		<div class="commentBox">
 			<div id="card" class="row row-cols-1 row-cols-md-4 g-4">
 				<div class="col">
-					<div class="card border-info mb-3">
+					<div class="card border-info mb-3" style="max-width: 18rem">
 						<div class="card-body">
 							<h5 class="card-title">닉네임</h5>
 							<p class="card-text">comment</p>
