--- a/team_stage/index.html
+++ b/team_stage/index.html
@@ -139,7 +139,7 @@
         <div class="col" id="storyCard5">
           <div class="card">
             <a href="storyCard5.html">
-              <img src="..." class="card-img-top" alt="이미지를 누르면 연결됩니다.">
+              <img src="김형민사진.jpg" class="card-img-top" alt="이미지를 누르면 연결됩니다.">
             </a>
             <div class="card-body">
               <h5 class="card-title">김형민</h5>
