--- a/team_stage/storyCard3.html
+++ b/team_stage/storyCard3.html
@@ -37,7 +37,24 @@
 			const app = initializeApp(firebaseConfig);
 			const db = getFirestore(app);
 
-		// 삭제기능 비밀번호가 계속 틀리다는 오류 //
+    $("#makeComment").click(async function () {
+        let title = $('#title').val();
+        let Password = $('#Password').val();
+        let comment = $('#comment').val();
+        let temp_html = `
+            <div class="col">
+                <div class="card border-info mb-3" style="max-width: 18rem">
+                    <div class="card-body">
+                        <h5 class="card-title">${title}</h5>
+                        <p class="card-text">${comment}</p>
+                        <button type="button" class="btn btn-outline-warning">수정</button>
+                        <button type="button" class="btn btn-outline-danger delete-btn">삭제</button>
+                    </div>
+                </div>
+            </div>`;
+        $('#card').append(temp_html);
+
+						// 삭제기능 //
 		$(document).on('click', '#card .delete-btn', function () {
         if ($(this).closest('.card-body').find('.password-input').length === 0) {
             const passwordInput = $('<input>', {
@@ -58,7 +75,7 @@
             passwordInput.on('keydown', function (e) {
     	     if (e.key === 'Enter') {
                     const enteredPassword = $(this).val();
-                    const storedPassword = 'your_actual_stored_password';
+                    const storedPassword = Password;
 
                     if (enteredPassword === storedPassword) {
                         deleteBtn.closest('.col').remove();
@@ -71,22 +88,6 @@
         } else {
         }
     });
-    $("#makeComment").click(async function () {
-        let title = $('#title').val();
-        let Password = $('#Password').val();
-        let comment = $('#comment').val();
-        let temp_html = `
-            <div class="col">
-                <div class="card border-info mb-3" style="max-width: 18rem">
-                    <div class="card-body">
-                        <h5 class="card-title">${title}</h5>
-                        <p class="card-text">${comment}</p>
-                        <button type="button" class="btn btn-outline-warning">수정</button>
-                        <button type="button" class="btn btn-outline-danger delete-btn">삭제</button>
-                    </div>
-                </div>
-            </div>`;
-        $('#card').append(temp_html);
     });
 </script>
 </head>
